--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
         <a href="#" class="logo"><h1>X3Music</h1></a>
       </div>
       <ul>
-        <li class="menu__home"><a href="#">Home</a></li>
+        <li class="menu__home menuSelected"><a href="#">Home</a></li>
         <li class="menu__musica"><a href="#">Música</a></li>
         <li class="menu__ropa"><a href="#">Ropa</a></li>
-        <li class="menu__accesorios"><a href="#">Accesorios</a></li>
+        <li class="menu__accesorios">
+          <a href="accesorios.html">Accesorios</a>
+        </li>
         <li class="menu__login"><a href="#">Login</a></li>
         <li class="menu__registro"><a href="#">Registro</a></li>
       </ul>
