--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         <a href="#" class="logo"><h1>X3Music</h1></a>
       </div>
       <ul>
-        <li class="menu__home menuSelected"><a href="#">Home</a></li>
+        <li class="menu__home menuSelected">
+          <a href="#">Home</a>
+        </li>
         <li class="menu__musica"><a href="#">Música</a></li>
         <li class="menu__ropa"><a href="#">Ropa</a></li>
         <li class="menu__accesorios">
