--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
           <a href="#">Registro</a>
         </li>
       </ul>
+      <span class="btn_menu"><i class="lni lni-menu"></i></span>
     </nav>
   </head>
   <body>
@@ -63,11 +64,11 @@
     <main>
       <div class="novedades">
         <h2>NOVEDADES</h2>
-        <a href=""
-          ><img class="novedades__img1" src="./img/hoodies.jpg" alt="hoodie"
+        <a href="holi" class="novedad1"
+          ><img class="novedades__img1" src="./img/hoodie.png" alt="hoodie"
         /></a>
-        <a href="">
-          <img class="novedades__img2" src="./img/travis.png" alt="travis"
+        <a href="xd" class="novedad2"
+          ><img class="novedades__img2" src="./img/travis.png" alt="travis"
         /></a>
       </div>
       <div class="containerProductos">
