responsive accesories page

--- a/accesorios.html
+++ b/accesorios.html
@@ -24,15 +24,20 @@
         <a href="#" class="logo"><h1>X3Music</h1></a>
       </div>
       <ul>
-        <li class="menu__home"><a href="index.html">Home</a></li>
+        <li class="menu__home">
+          <a href="index.html">Home</a>
+        </li>
         <li class="menu__musica"><a href="#">Música</a></li>
         <li class="menu__ropa"><a href="#">Ropa</a></li>
         <li class="menu__accesorios menuSelected">
-          <a href="#">Accesorios</a>
+          <a href="accesorios.html">Accesorios</a>
         </li>
         <li class="menu__login"><a href="#" id="btnLogin">Login</a></li>
-        <li class="menu__registro"><a href="#">Registro</a></li>
+        <li class="menu__registro">
+          <a href="#">Registro</a>
+        </li>
       </ul>
+      <span class="btn_menu"><i class="lni lni-menu"></i></span>
     </nav>
   </head>
   <body>
@@ -153,11 +158,10 @@
       <div class="footer">
         <div class="horarios">
           <pre>
-              Horarios 
-              Lunes a Viernes: 08:00 hrs - 20:00 hrs 
-              sABADOS: 10:00 hrs - 18:00 hrs
-            </pre
-          >
+        Horarios 
+        Lunes a Viernes: 08:00 hrs - 20:00 hrs 
+        sABADOS: 10:00 hrs - 18:00 hrs
+          </pre>
         </div>
 
         <div class="social">
@@ -170,14 +174,14 @@
         </div>
         <div class="contacto">
           <pre>
-                  Contacto
-                  Telefono: 72289214
-                  Direccion: Alameda #043, Rancagua.
-            </pre
-          >
+        Contacto
+        Telefono: 72289214
+        Direccion: Alameda #043, Rancagua.
+          </pre>
         </div>
       </div>
     </footer>
-    <script src="js/register.js"></script>
+    <script src="js/login.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
