--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
       <div class="footer">
         <div class="horarios">
           <pre>
-            Horarios 
-            Lunes a Viernes: 08:00 hrs - 20:00 hrs 
-            sABADOS: 10:00 hrs - 18:00 hrs
+        Horarios 
+        Lunes a Viernes: 08:00 hrs - 20:00 hrs 
+        sABADOS: 10:00 hrs - 18:00 hrs
           </pre>
         </div>
 
@@ -166,13 +166,14 @@
         </div>
         <div class="contacto">
           <pre>
-                Contacto
-                Telefono: 72289214
-                Direccion: Alameda #043, Rancagua.
+        Contacto
+        Telefono: 72289214
+        Direccion: Alameda #043, Rancagua.
           </pre>
         </div>
       </div>
     </footer>
-    <script src="js/register.js"></script>
+    <script src="js/login.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
