added sign up form

--- a/accesorios.html
+++ b/accesorios.html
@@ -41,7 +41,7 @@
     </nav>
   </head>
   <body>
-    <div id="modalLogin" class="modalLogin">
+    <div id="modalLogin" class="modal modalLogin">
       <div class="modalLogin-content">
         <form action="" method="get" class="formLogin">
           <h2>Login</h2>
@@ -58,6 +58,38 @@
             placeholder="Contraseña"
           />
           <button id="btnIniciar">Iniciar</button>
+        </form>
+      </div>
+    </div>
+    <div id="modalRegister" class="modal modalRegister">
+      <div class="modalLogin-content">
+        <form action="" method="get" class="formRegister">
+          <h2>Registro</h2>
+          <input
+            type="text"
+            name="regCorreo"
+            id="regCorreo"
+            placeholder="Correo"
+          />
+          <input
+            type="text"
+            name="regCorreo"
+            id="regCorreo2"
+            placeholder="Correo"
+          />
+          <input
+            type="text"
+            name="regCorre3"
+            id="regCorreo"
+            placeholder="Correo"
+          />
+          <input
+            type="password"
+            name="regPass"
+            id="regPass"
+            placeholder="Contraseña"
+          />
+          <button id="btnRegistrar">Registrar</button>
         </form>
       </div>
     </div>
