--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
         </li>
         <li class="menu__login"><a href="#" id="btnLogin">Login</a></li>
         <li class="menu__registro">
-          <a href="#">Registro</a>
+          <a href="#" id="btnRegistro">Registro</a>
         </li>
       </ul>
       <span class="btn_menu"><i class="lni lni-menu"></i></span>
     </nav>
   </head>
   <body>
-    <div id="modalLogin" class="modalLogin">
+    <div id="modalLogin" class="modal modalLogin">
       <div class="modalLogin-content">
         <form action="" method="get" class="formLogin">
           <h2>Login</h2>
@@ -58,6 +58,38 @@
             placeholder="Contraseña"
           />
           <button id="btnIniciar">Iniciar</button>
+        </form>
+      </div>
+    </div>
+    <div id="modalRegister" class="modal modalRegister">
+      <div class="modalLogin-content">
+        <form action="" method="get" class="formRegister">
+          <h2>Registro</h2>
+          <input
+            type="text"
+            name="regCorreo"
+            id="regCorreo"
+            placeholder="Correo"
+          />
+          <input
+            type="text"
+            name="regCorreo"
+            id="regCorreo2"
+            placeholder="Correo"
+          />
+          <input
+            type="text"
+            name="regCorreo"
+            id="regCorreo3"
+            placeholder="Correo"
+          />
+          <input
+            type="password"
+            name="regPass"
+            id="regPass"
+            placeholder="Contraseña"
+          />
+          <button id="btnRegistrar">Registrar</button>
         </form>
       </div>
     </div>
