fixed desktop modals

--- a/accesorios.html
+++ b/accesorios.html
@@ -34,7 +34,7 @@
         </li>
         <li class="menu__login"><a href="#" id="btnLogin">Login</a></li>
         <li class="menu__registro">
-          <a href="#">Registro</a>
+          <a href="#" id="btnRegistro">Registro</a>
         </li>
       </ul>
       <span class="btn_menu"><i class="lni lni-menu"></i></span>
@@ -79,8 +79,8 @@
           />
           <input
             type="text"
-            name="regCorre3"
-            id="regCorreo"
+            name="regCorreo"
+            id="regCorreo3"
             placeholder="Correo"
           />
           <input
