added more pages

--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
     <link rel="stylesheet" href="style.css" />
     <nav class="menu">
       <div class="menu__logo">
-        <a href=""><img src="img/logo.png" alt="" /></a>
-        <a href="#" class="logo"><h1>X3Music</h1></a>
+        <a href="index.html"><img src="img/logo.png" alt="" /></a>
+        <a href="index.html" class="logo"><h1>X3Music</h1></a>
       </div>
       <ul>
         <li class="menu__home menuSelected">
-          <a href="#">Home</a>
+          <a href="index.html">Home</a>
         </li>
-        <li class="menu__musica"><a href="#">Música</a></li>
-        <li class="menu__ropa"><a href="#">Ropa</a></li>
+        <li class="menu__musica"><a href="musica.html">Música</a></li>
+        <li class="menu__ropa"><a href="ropa.html">Ropa</a></li>
         <li class="menu__accesorios">
           <a href="accesorios.html">Accesorios</a>
         </li>
