--- a/musica.html
+++ b/musica.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>X3MUSIC - Accesorios</title>
+    <title>X3MUSIC - Música</title>
     <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -27,9 +27,11 @@
         <li class="menu__home">
           <a href="index.html">Home</a>
         </li>
-        <li class="menu__musica"><a href="musica.html">Música</a></li>
+        <li class="menu__musica menuSelected">
+          <a href="musica.html">Música</a>
+        </li>
         <li class="menu__ropa"><a href="ropa.html">Ropa</a></li>
-        <li class="menu__accesorios menuSelected">
+        <li class="menu__accesorios">
           <a href="accesorios.html">Accesorios</a>
         </li>
         <li class="menu__login"><a href="#" id="btnLogin">Login</a></li>
@@ -95,11 +97,11 @@
     </div>
     <main class="mainAcc">
       <div class="containerAcc">
-        <h1>ACCESORIOS</h1>
+        <h1>MÚSICA</h1>
         <div class="cardProducto Accesorio1">
-          <img src="img/producto/tazon-standard-con-diseno.jpg" alt="" />
-          <p class="cardProducto__Text">Taza Bts</p>
-          <p class="cardProducto__Price">$7.990</p>
+          <img src="img/producto/oasis.jpg" alt="" />
+          <p class="cardProducto__Text">cd oasis</p>
+          <p class="cardProducto__Price">$14.990</p>
           <div class="card__overlay">
             <div class="overlay__text">
               <a href="#" class="ver">Ver mas...</a>
@@ -108,19 +110,8 @@
           </div>
         </div>
         <div class="cardProducto Accesorio2">
-          <img src="img/producto/travis.jpg" alt="" />
-          <p class="cardProducto__Text">Figura accion travis</p>
-          <p class="cardProducto__Price">$31.990</p>
-          <div class="card__overlay">
-            <div class="overlay__text">
-              <a href="#" class="ver">Ver mas...</a>
-              <a href="#" class="agregar">agregar</a>
-            </div>
-          </div>
-        </div>
-        <div class="cardProducto Accesorio3">
-          <img src="img/producto/mousepad.jpg" alt="" />
-          <p class="cardProducto__Text">Mousepad marshmello</p>
+          <img src="img/producto/harrys house.jpg" alt="" />
+          <p class="cardProducto__Text">cd harry’s house</p>
           <p class="cardProducto__Price">$19.990</p>
           <div class="card__overlay">
             <div class="overlay__text">
@@ -130,31 +121,9 @@
           </div>
         </div>
         <div class="cardProducto Accesorio3">
-          <img src="img/producto/kurt cobain.jpg" alt="" />
-          <p class="cardProducto__Text">Funko pop Kurt cobain</p>
-          <p class="cardProducto__Price">$16.990</p>
-          <div class="card__overlay">
-            <div class="overlay__text">
-              <a href="#" class="ver">Ver mas...</a>
-              <a href="#" class="agregar">agregar</a>
-            </div>
-          </div>
-        </div>
-        <div class="cardProducto Accesorio1">
-          <img src="img/producto/korn.jpg" alt="" />
-          <p class="cardProducto__Text">Llavero KORN</p>
-          <p class="cardProducto__Price">$1.990</p>
-          <div class="card__overlay">
-            <div class="overlay__text">
-              <a href="#" class="ver">Ver mas...</a>
-              <a href="#" class="agregar">agregar</a>
-            </div>
-          </div>
-        </div>
-        <div class="cardProducto Accesorio2">
-          <img src="img/producto/funko.jpg" alt="" />
-          <p class="cardProducto__Text">Funko pop batman</p>
-          <p class="cardProducto__Price">$16.990</p>
+          <img src="img/producto/dvd.jpg" alt="" />
+          <p class="cardProducto__Text">At the gates burns dvd</p>
+          <p class="cardProducto__Price">$29.990</p>
           <div class="card__overlay">
             <div class="overlay__text">
               <a href="#" class="ver">Ver mas...</a>
@@ -163,20 +132,9 @@
           </div>
         </div>
         <div class="cardProducto Accesorio3">
-          <img src="img/producto/pantera.png" alt="" />
-          <p class="cardProducto__Text">Uñetas pantera</p>
-          <p class="cardProducto__Price">$6.990</p>
-          <div class="card__overlay">
-            <div class="overlay__text">
-              <a href="#" class="ver">Ver mas...</a>
-              <a href="#" class="agregar">agregar</a>
-            </div>
-          </div>
-        </div>
-        <div class="cardProducto Accesorio3">
-          <img src="img/producto/bp.jpg" alt="" />
-          <p class="cardProducto__Text">Estuche black pink</p>
-          <p class="cardProducto__Price">$11.990</p>
+          <img src="img/producto/adele.jpeg" alt="" />
+          <p class="cardProducto__Text">cd adele - 30</p>
+          <p class="cardProducto__Price">$19.990</p>
           <div class="card__overlay">
             <div class="overlay__text">
               <a href="#" class="ver">Ver mas...</a>
